--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <input type="text" id="input" class="text" placeholder="Enter word here">
             <button class="submit" id="button">Search</button>
         </div>
-        <div class="display">
+        <div class="display" id="display">
 
         </div>
     </div>
