--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <button class="submit" id="button">Search</button>
         </div>
         <div class="display" id="display">
+            <h4 id="meaning"></h4>
 
         </div>
     </div>
