added loading css

--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
             <input type="text" id="input" class="text" placeholder="Enter word here">
             <button class="submit" id="button">Search</button>
         </div>
+        <h3 id="word"></h3>
         <div class="display" id="display">
             <h4 id="meaning"></h4>
-
+        </div>
+        <div class="load" id="load">
         </div>
     </div>
     <script src="dictionary.js"></script>
